--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@twa-dev/sdk": "^8.0.1",
     "animejs": "^3.2.2",
     "axios": "^1.7.9",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.1",
@@ -27,6 +30,7 @@
     "@types/animejs": "^3.1.13",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-i18next": "^8.1.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "daisyui": "^5.0.0-beta.5",
     "eslint": "^9.17.0",
