--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.1",
-    "@ton/core": "^0.60.1",
-    "@ton/ton": "^15.2.1",
     "@tonconnect/sdk": "^3.0.6",
     "@tonconnect/ui-react": "^2.0.11",
     "@twa-dev/sdk": "^8.0.1",
     "animejs": "^3.2.2",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "react": "^18.3.1",
