--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animejs": "^3.2.2",
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
+    "framer-motion": "^12.4.7",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "react": "^18.3.1",
