--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^15.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.1",
     "typed.js": "^2.1.0"
   },
