--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.4.7",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
+    "motion": "^12.5.0",
     "progressbar.js": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
